--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -24,8 +24,8 @@
   			html: html
 		}) }} -->
 
-		
-			<p>Due by 16th February 2024
+
+			<p class="govuk-body govuk-!-margin-bottom-7">Due by 16th February 2024
 			<br><span class="govuk-body-s">Last updated: 16th February 2024 by Alex Smith</span></p>
 		
 		
@@ -42,11 +42,11 @@
 
 
 		
-
+		<p class="govuk-body govuk-!-margin-top-7">Content to follow. All content is available under the Open Government Licence v3.0, except where otherwise stated</p>
 		<form method="post" action="/project/report/check-your-answers" >
 		
 			{{ govukButton({
-            	text: "Continue"
+            	text: "Confirm and continue"				
           	}) }}
 		
 		</form>
