--- a/app/views/project/report/check-your-answers.html
+++ b/app/views/project/report/check-your-answers.html
@@ -12,19 +12,50 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
-  
-
-		<h2 class="govuk-heading-m govuk-!-margin-top-9">Submitting your report</h2>
 		
+	
+		<dl class="govuk-summary-list govuk-!-margin-bottom-9">
+			<div class="govuk-summary-list__row">
+				<dt class="govuk-summary-list__key">Name</dt>
+			  	<dd class="govuk-summary-list__value">Sarah Philips</dd>
+			  	<dd class="govuk-summary-list__actions"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a></dd>
+			</div>
+			<div class="govuk-summary-list__row">
+			  	<dt class="govuk-summary-list__key">Date of birth</dt>
+			  	<dd class="govuk-summary-list__value">5 January 1978</dd>
+			  	<dd class="govuk-summary-list__actions"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a></dd>
+			</div>
+			<div class="govuk-summary-list__row">
+			  	<dt class="govuk-summary-list__key">Customer reference</dt>
+			  	<dd class="govuk-summary-list__value">Not provided</dd>
+			  	<dd class="govuk-summary-list__actions"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> customer reference</span></a></dd>
+			</div>
+			<div class="govuk-summary-list__row">
+			  	<dt class="govuk-summary-list__key">Address</dt>
+			  	<dd class="govuk-summary-list__value">72 Guild Street<br>London<br>SE23 6FH</dd>
+			  	<dd class="govuk-summary-list__actions"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a></dd>
+			</div>
+			<div class="govuk-summary-list__row">
+			  	<dt class="govuk-summary-list__key">Contact details</dt>
+			  	<dd class="govuk-summary-list__value">
+					<p class="govuk-body">07700 900457</p>
+					<p class="govuk-body">sarah.phillips@example.com</p></dd>
+			  	<dd class="govuk-summary-list__actions"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></dd>
+			</div>
+		</dl>
+
+
+
+		<h2 class="govuk-heading-m govuk-!-margin-top-9">Submitting your report</h2>		
 		<p>By submitting this report you are confirming that, to the best of your knowledge, the information is accurate and up to date and all issues effecting delivery have been reported on.</p>		
-		
 
-		
         <div class="govuk-button-group">
         	{{ govukButton({
             	text: "Accept and submit this report",
 				href: "/project/report/confirmation"
           	}) }}            
+
+			<a class="govuk-link" href="#">Cancel and return to report</a>
         </div>
 
   	</div>  
