--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -17,66 +17,106 @@
 
     </div>
     <div class="govuk-grid-column-full">
-            
-           
-            
-            {% set reportHtml %}                            
-                <h3 class="govuk-heading-m">Report</h3>
-                <ul class="govuk-list govuk-list--bullet">
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/" >Project Overview</a></li>                                                
-                    <ul class="govuk-list govuk-list--bullet">                        
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/progress-summary" >Progress summary</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/communications" >Upcoming communications</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/rag" >RAG rating</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/challenges" >Project challenges</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/riba" >RIBA reporting</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/delivery-plan/milestones/" >Project milestones</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues" >Project issues</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks" >Issues and risks</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/expenditure/" >Project expenditure</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/outputs/" >Project outputs</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/outcomes/" >Project outcomes</a></li>                                                
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/changes/" >Project changes</a></li>                            
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off-and-submission/" >Sign off and submit project report</a></li>                            
-                    </ul>
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/support/" >Project support</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/users/" >Project users</a></li>                
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/users/edit" >Edit a user</a></li>
-                    </ul>            
-                </ul>              
-            {% endset -%}  
 
-            {% set toFollowHtml %}                            
+        {% set programmeHtml %}
+            <h3 class="govuk-heading-m">Programme</h3>
 
-            
+        {% endset -%}  
+        
+        {% set reportHtml %}
+            <h3 class="govuk-heading-m">Report</h3>
             <ul class="govuk-list govuk-list--bullet">
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                                            
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/gov-gateway/sign-in" >Sign in using Government Gateway</a></li>                                            
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/programmes" >Programmes</a></li>    
-                                                          
-            </ul>  
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/" >Project Overview</a></li>                    
+                <ul class="govuk-list govuk-list--bullet">                        
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/progress-summary" >How is your project progressing?</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/communications/" >Do you have any upcoming communications opportunities?</a></li> 
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/communications/add/" >Title of the communication opportunity</a></li> 
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/communications/add/details" >Tell us in more detail about your upcoming communications</a></li> 
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/communications/add/more" >Do you want to add any further communications?</a></li> 
+                    </ul>                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/ragRating/" >What is your overall RAG rating?</a></li>   
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/ragRating/">What is your overall RAG rating?</a></li>   
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/ragRating/schedule">What is your schedule RAG rating?</a></li>   
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/ragRating/budget">What is your budget RAG rating?</a></li>   
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/ragRating/resourcing">What is your overall RAG rating?</a></li>   
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/ragRating/information">Is there anything you need to tell us about your ratings?</a></li>   
+                    </ul>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/challenges/" >Do you need to add any project challenges?</a></li>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/challenges/add/" >Title of the project challenge</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/challenges/add/details" >Tell us more about this project challenge</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/challenges/add/more" >Do you want to add any more project challenges?</a></li>
+
+                    </ul>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/riba/" >Select an option to update your RIBA reporting stage</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/delivery-plan/milestones/" >Project milestones</a></li>
+                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues/" >Do you need to add any project issues?</a></li>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues/add/" >Title of issue?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues/add/impact" >Rate the impact of the issue?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues/add/details" >Tell us in more detail about the issue</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues/add/measures" >What are you doing to address the issue?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues/add/support" >Do you need any support from us?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues/add/" >Do you want to add any more issues?</a></li>
+                    </ul>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks/" >Do you need to add any project risks?</a></li>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks/add/" >Title of issue</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks/add/category" >What category is the risk?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks/add/details" >Tell us how you will mitigate this risk</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks/add/likelihood" >What is the likelihood of this risk becoming an issue?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks/add/more" >Do you want to add any more risks?</a></li>                        
+                    </ul>
+
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/expenditure/" >Project expenditure</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/outputs/" >Project outputs</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/outcomes/" >Project outcomes</a></li>                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/changes/" >Project changes</a></li>
+                    <!-- <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off-and-submission/" >Sign off and submit project report</a></li> -->
+
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/check-your-answers" >Check your answers</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/confirmamtion" >Report submitted</a></li>
+
+                </ul>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/support/" >Project support</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/users/" >Project users</a></li>                
+                <ul class="govuk-list govuk-list--bullet">
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/users/edit" >Edit a user</a></li>
+                </ul>            
                 
+                
+            </ul>              
+        {% endset -%}  
+
+        {% set adminHtml %}            
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/gov-gateway/sign-in" >Sign in using Government Gateway</a></li>                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/programmes" >Programmes</a></li>      
+            </ul>                  
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/help" >Help</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/privacy-notice" >Privacy Notice</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/terms-and-conditions" >Terms and conditions</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/cookies">Cookies</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/accessibility">Accessibility</a></li>
-            </ul>  
-            
-            {% endset -%}  
+            </ul>              
+        {% endset -%}  
 
             <!-- Tabs -->
-            {{ govukTabs({
-                items: [           
-                { label: "Report", id: "report", panel: { html: reportHtml } },                        
-                { label: "Service main pages", id: "tofollow", panel: { html: toFollowHtml } }                    
-                ]
-            }) }}
+        {{ govukTabs({
+            items: [           
+            
+            { label: "Programmes", id: "programme", panel: { html: programmeHtml } },
+            { label: "Report", id: "report", panel: { html: reportHtml } },                        
+            { label: "Service admin pages", id: "admin", panel: { html: adminHtml } }                    
+            ]
+        }) }}
 
-            <p><a class="govuk-link govuk-link--no-visited-state" href="/data">Data been stored as part of current session</a></p>
-
+        <p><a class="govuk-link govuk-link--no-visited-state" href="/data">Data been stored as part of current session</a></p>
 
     </div>
 </div>
