--- a/app/views/macros/page-title.njk
+++ b/app/views/macros/page-title.njk
@@ -5,5 +5,5 @@
     pageHeading = "",
     pageSection = ""
 ) %}
-    {% if pageHeading %}{{ pageHeading }} - {% endif %}{% if pageSection %}{{ pageSection }} - {% endif %}Defra Customer Identity - GOV.UK
+    {% if pageHeading %}{{ pageHeading }} - {% endif %}{% if pageSection %}{{ pageSection }} - {% endif %}Reporting funding progress - GOV.UK
 {% endmacro %}
