--- a/app/views/programmes.html
+++ b/app/views/programmes.html
@@ -1,7 +1,8 @@
 {% extends "layouts/main.html" %}
 
 {% set showBackLink = false %}
-{% set showNav = true %}
+{% set showNav = false %}
+
 
 {% set pageHeading = "Programmes" %}
 {% set pageSection = "" %}
