--- a/app/views/project/report/confirmation.html
+++ b/app/views/project/report/confirmation.html
@@ -13,13 +13,13 @@
 
         {{ govukPanel({
 			titleText: "Report submitted",
-			html: "Your reference number<br><strong>HDJ2123F</strong>"
+			html: "Reporting period<br><strong>July 2023 to September 2023</strong>"
 		}) }}
 	
 		<p class="govuk-body">We have sent you a confirmation email.</p>			
 
 		<h2 class="govuk-heading-m">What happens next</h2>	
-		<p class="govuk-body">We will email your .....</p>		  
+		<p class="govuk-body">We will email the section 151 officer .....</p>		  
 
 		<p><a href="/project/" class="govuk-link govuk-link--no-visited-state">Return to your project overview</a></p>
 
