--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -37,7 +37,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         {% endif %}
 
 
-		{{ xGovukPrimaryNavigation({
+		<!-- {{ xGovukPrimaryNavigation({
         	visuallyHiddenTitle: "Navigation",
           	items: [		  		
 				{ text: "Programmes", href: "/programmes", current: true }, 
@@ -55,7 +55,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
               	{ text: "Users", href: "/users/" }
             ]
         }) }}
-    {% endif %}
+    {% endif %} -->
         
 
 {% endblock %}
