--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -20,6 +20,9 @@
 
         {% set programmeHtml %}
             <h3 class="govuk-heading-m">Programme</h3>
+            <ul class="govuk-list govuk-list--bullet">                        
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/programmes" >Programmes</a></li>      
+            </ul>
 
         {% endset -%}  
         
@@ -92,10 +95,11 @@
         {% endset -%}  
 
         {% set adminHtml %}            
+        <h3 class="govuk-heading-m">Service root pages</h3>
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/gov-gateway/sign-in" >Sign in using Government Gateway</a></li>                
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/programmes" >Programmes</a></li>      
+                <!-- <li><a class="govuk-link govuk-link--no-visited-state" href="/gov-gateway/sign-in" >Sign in using Government Gateway</a></li>                 -->
+                
             </ul>                  
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/help" >Help</a></li>
@@ -112,7 +116,7 @@
             
             { label: "Programmes", id: "programme", panel: { html: programmeHtml } },
             { label: "Report", id: "report", panel: { html: reportHtml } },                        
-            { label: "Service admin pages", id: "admin", panel: { html: adminHtml } }                    
+            { label: "Service pages", id: "admin", panel: { html: adminHtml } }                    
             ]
         }) }}
 
