--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -35,9 +35,9 @@
 		{% include "includes/task-delivery.html" %}
 		
 		{% include "includes/task-expenditure.html" %}
-		{% include "includes/task-outputs.html" %}
-		{% include "includes/task-outcomes.html" %}
-		{% include "includes/task-changes.html" %}
+		<!-- {% include "includes/task-outputs.html" %}
+		{% include "includes/task-outcomes.html" %} -->
+		<!-- {% include "includes/task-changes.html" %} -->
 		<!-- {% include "includes/task-sign-off.html" %} -->
 
 
