--- a/app/views/includes/task-overview.html
+++ b/app/views/includes/task-overview.html
@@ -31,7 +31,7 @@
 	</li>
 	<li class="govuk-task-list__item govuk-task-list__item--with-link">
 		<div class="govuk-task-list__name-and-hint">
-			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/overview/ragRating/" aria-describedby="report-3-status">RAG Status</a>
+			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/overview/ragRating/" aria-describedby="report-3-status">Red-Amber-Green (RAG) Status</a>
 	  	</div>
 	  	<div class="govuk-task-list__status" id="report-3-status">			
 			{% if data['report-3-status'] == "Completed" %}
@@ -59,7 +59,7 @@
 	</li>
 	<li class="govuk-task-list__item govuk-task-list__item--with-link">
 		<div class="govuk-task-list__name-and-hint">
-			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/overview/riba/" aria-describedby="report-5-status">RIBA</a>
+			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/overview/riba/" aria-describedby="report-5-status">Royal Institute of British Architects (RIBA)</a>
 	  	</div>
 	  	<div class="govuk-task-list__status" id="report-5-status">			
 			{% if data['report-5-status'] == "Completed" %}
