--- a/app/views/admin/contact-email.html
+++ b/app/views/admin/contact-email.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = 'What‘s ' +  + ' email address?' %}
+{% set pageHeading = 'What’s ' + data.adminContactName + '’s email address?' %}
 {% set pageSection = "Administration" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
