--- a/app/views/admin/organisation-name.html
+++ b/app/views/admin/organisation-name.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What’s the name of the organisation?" %}
+{% set pageHeading = "What’s the name of your organisation?" %}
 {% set pageSection = "Administration" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -12,12 +12,10 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
-		
-		<p>This is the date Pathfinder grant elements of project will be physically complete.</p>
+			
 
 		<form method="post" action="/admin/contact-name" >
             
-
             {{ govukInput({
                 label: {
                   text: "Title of the communication opportunity",
@@ -28,17 +26,11 @@
                 id: "adminPracticalCompletionDate",
                 name: "adminPracticalCompletionDate"
             }) }}            
-
-			<div class="govuk-button-group">
-				{{ govukButton({
-				  text: "Continue"
-				}) }}
-				<!-- {{ govukButton({
-				  text: "Save as draft",
-				  classes: "govuk-button--secondary"
-				}) }} -->
-		  </div>
-
+			
+			{{ govukButton({
+				text: "Continue"
+			}) }}
+		
 		</form>
 
   	</div>	  
