--- a/app/views/admin/practical-completion-date.html
+++ b/app/views/admin/practical-completion-date.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Practical completion date" %}
+{% set pageHeading = "What’s your practical completion date?" %}
 {% set pageSection = "Administration" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -17,28 +17,26 @@
 
 		<form method="post" action="/admin/organisation-name" >
             
+			{{ govukDateInput({
+				id: "adminPracticalCompletionDate",
+				namePrefix: "adminPracticalCompletionDate",
+				fieldset: {
+					legend: {
+						text: pageHeading,
+						isPageHeading: false,
+						classes: "govuk-fieldset__legend govuk-visually-hidden"
+				  	}
+				},
+				hint: {
+					text: "For example, 27 3 2024"
+				}
+			}) }}                 
 
-            {{ govukInput({
-                label: {
-                  text: "Title of the communication opportunity",
-                  classes: "govuk-label govuk-visually-hidden",
-                  isPageHeading: false
-                },                
-				classes: "govuk-!-width-two-thirds",
-                id: "adminPracticalCompletionDate",
-                name: "adminPracticalCompletionDate"
-            }) }}            
-
-			<div class="govuk-button-group">
-				{{ govukButton({
-				  text: "Continue"
-				}) }}
-				<!-- {{ govukButton({
-				  text: "Save as draft",
-				  classes: "govuk-button--secondary"
-				}) }} -->
-		  </div>
-
+			
+			{{ govukButton({
+				text: "Continue"
+			}) }}
+			
 		</form>
 
   	</div>	  
