--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -97,10 +97,16 @@
         {% set adminHtml %}            
         <h3 class="govuk-heading-m">Admin pages</h3>
         <p>To follow</p>
-            <!-- <ul class="govuk-list govuk-list--bullet">
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                
-            </ul>                  
             <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/completion-date" >What’s the financial completion date?</a></li>                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/practical-completion-date" >What’s your practical completion date?</a></li>                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/organisation-name" >What’s the name of the organisation?</a></li>      
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/contact-name" >Who is the main contact for the return?</a></li>                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/contact-email" >What’s {NAME}’s email address?</a></li>                                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/contact-telephone" >What’s {NAME}’s telephone number?</a></li>                
+                          
+            </ul>                  
+            <!-- <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/help" >Help</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/privacy-notice" >Privacy Notice</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/terms-and-conditions" >Terms and conditions</a></li>
