--- a/app/views/admin/completion-date.html
+++ b/app/views/admin/completion-date.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What’s your financial completion date?" %}
+{% set pageHeading = "What’s the financial completion date?" %}
 {% set pageSection = "Administration" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
