--- a/app/views/admin/contact-name.html
+++ b/app/views/admin/contact-name.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Who is the main contact for the return?" %}
+{% set pageHeading = "Who is the main contact for this return?" %}
 {% set pageSection = "Administration" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
