--- a/app/views/admin/organisation-name.html
+++ b/app/views/admin/organisation-name.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What’s the name of your organisation?" %}
+{% set pageHeading = "What’s the name of the organisation?" %}
 {% set pageSection = "Administration" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
