--- a/app/views/admin/completion-date.html
+++ b/app/views/admin/completion-date.html
@@ -13,7 +13,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
-		<p>This is the date the portfolio grant funding will be defrayed by the local authority.</p>
+		<p>This is the date the grant funding will be paid by the local authority.</p>
 
 		<form method="post" action="/admin/practical-completion-date" >
             
