--- a/app/views/admin/practical-completion-date.html
+++ b/app/views/admin/practical-completion-date.html
@@ -13,7 +13,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
-		<p>This is the date Pathfinder grant elements of project will be physically complete.</p>
+		<p>This is the date the grant elements of the project will be physically complete.</p>
 
 		<form method="post" action="/admin/organisation-name" >
             
