change to caption

--- a/app/views/admin/completion-date.html
+++ b/app/views/admin/completion-date.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "What’s the financial completion date?" %}
-{% set pageSection = "Administration" %}
+{% set pageSection = "Your account" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
