--- a/app/views/admin/contact-email.html
+++ b/app/views/admin/contact-email.html
@@ -7,7 +7,7 @@
 {% else %}
 	{% set pageHeading = 'What’s their email address?' %}
 {% endif %}
-{% set pageSection = "Administration" %}
+{% set pageSection = "Your account" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
