--- a/app/views/admin/contact-telephone.html
+++ b/app/views/admin/contact-telephone.html
@@ -9,7 +9,7 @@
 	{% set pageHeading = 'What’s their telephone number?' %}
 {% endif %}
 
-{% set pageSection = "Administration" %}
+{% set pageSection = "Your account" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
