--- a/app/views/admin/contact-name.html
+++ b/app/views/admin/contact-name.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "Who is the main contact for this return?" %}
-{% set pageSection = "Administration" %}
+{% set pageSection = "Your account" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
