--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -37,11 +37,12 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         {% endif %}
 
 
-		<!-- {{ xGovukPrimaryNavigation({
+		 {{ xGovukPrimaryNavigation({
         	visuallyHiddenTitle: "Navigation",
           	items: [		  		
-				{ text: "Programmes", href: "/programmes", current: true }, 
-				{ text: "Support", href: "#" }
+				{ text: "Pathfinders", href: "/programmes", current: true }, 
+				{ text: "Levelling up Fund", href: "#" }
+                
 			]
         }) }}
 
@@ -55,7 +56,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
               	{ text: "Users", href: "/users/" }
             ]
         }) }}
-    {% endif %} -->
+    {% endif %} 
         
 
 {% endblock %}
