--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -21,7 +21,7 @@
         {% set programmeHtml %}
             <h3 class="govuk-heading-m">Programme</h3>
             <ul class="govuk-list govuk-list--bullet">                        
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/programmes" >Programmes</a></li>      
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/dashboard" >Programmes</a></li>      
             </ul>
 
         {% endset -%}  
