--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
       {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}
 
       <ul class="govuk-list govuk-body-s">
-        <li>Last updated: <span class="govuk-!-font-weight-bold">24 May 2024</span></li>
+        <li>Last updated: <span class="govuk-!-font-weight-bold">29 May 2024</span></li>
         <li>Prototype version: {{releaseVersion}}</li>
       </ul>
 
@@ -26,7 +26,7 @@
             <p>These are the main flows, but you will also be able to select various data to preload (once built) to include specific scenarios, pages and content.</p>      
             
             <div class="govuk-button-group">
-                <form action="/programmes" method="post" >                    
+                <form action="/dashboard" method="post" >                    
                     {{ govukButton({
                         text: "Start at programme level"
                     }) }}
