--- a/app/views/find/confirmation.html
+++ b/app/views/find/confirmation.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = false %}
+{% set showBackLink = true %}
 {% set serviceName = "Find monitoring data" %}
 
 {% set pageHeading = "Request received" %}
@@ -10,34 +10,18 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-	<div class="govuk-grid-column-two-thirds">
-
-    	<!-- {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}       -->
+	<div class="govuk-grid-column-two-thirds">    	
 
         {{ govukPanel({
             titleText: pageHeading            
-          }) }}
-		
-        
+        }) }}
+		        
         <h2 class="govuk-heading-m govuk-!-margin-top-7">What happens next</h2>
         <p class="govuk-body">We will email a link to <span class="govuk-!-font-weight-bold">user@levellingup.gov.uk</span>.</p>
-        <p>This may take anything up to [whatever we think the maximum amount of time is] minutes to come through to your inbox.</p>
+        <p class="govuk-body">This may take anything up to [whatever we think the maximum amount of time is] minutes to come through to your inbox.</p>
 
-
-        
         <h2 class="govuk-heading-m">If you’ve not recieved the email</h2>
-        <p>If you cannot see the email in your inbox, check your junk or spam folder. If you’re still having problems, <a href="#">request a new link to download your data</a> or email us at <a href="mailto:fsd.support@levellingup.gov.uk">fsd.support@levellingup.gov.uk</a>.</p>
-
-
-        
-        <!-- <p>Check your junk or spam folder.</p><p>If you’re still having problems, you can <a href="#">request a new download link</a> or email us at <a href="mailto:fsd.support@levellingup.gov.uk">fsd.support@levellingup.gov.uk</a>.</p> -->
-
-
-
-        <!-- <p class="govuk-body">
-            <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
-          </p> -->
-
+        <p class="govuk-body">If you cannot see the email in your inbox, check your junk or spam folder. If you’re still having problems, <a href="#">request a new link to download your data</a> or email us at <a href="mailto:fsd.support@levellingup.gov.uk">fsd.support@levellingup.gov.uk</a>.</p>
 
   	</div>	  
 </div>
