--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -26,7 +26,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         {% endif %}
 
 
-        {% if showBread == true %}
+        <!-- {% if showBread == true %}
         {{ govukBreadcrumbs({
           items: [
             { text: "Programmes", href: "/dashboard" },
@@ -43,7 +43,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 				{ text: "Pathfinders", href: "/programmes", current: true }, 
 				{ text: "Levelling up Fund", href: "#" }                
 			]
-        }) }}sign-in
+        }) }} -->
 
 
 
