added find to listings

--- a/app/views/find/confirmation.html
+++ b/app/views/find/confirmation.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = true %}
+{% set showBackLink = false %}
 {% set serviceName = "Find monitoring data" %}
 
 {% set pageHeading = "Request received" %}
