--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -60,3 +60,25 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         
 
 {% endblock %}
+
+
+{% block footer %}
+    {{ govukFooter({
+      meta: {
+        html: '        
+          <ul class="govuk-footer__inline-list">
+              <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="/help" rel="noreferrer noopener" target="_blank">Help</a></li>
+              <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="/privacy-notice" rel="noreferrer noopener" target="_blank">Privacy notice</a></li>
+              <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="/terms-and-conditions" rel="noreferrer noopener" target="_blank">Terms and conditions</a></li>
+              <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="/cookies" rel="noreferrer noopener" target="_blank">Cookies</a></li>
+              <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="/accessibility" rel="noreferrer noopener" target="_blank">Accessibility</a></li>
+          </ul>
+          <p><a class="govuk-body-s govuk-footer__link" href="/manage-prototype/clear-data" >Clear data</a> | <a class="govuk-body-s govuk-footer__link" href="/manage-prototype" >Manage prototype</a></p>',
+
+
+        items: [
+
+        ]
+      }
+    }) }}
+  {% endblock %}
