initial thoughts on top level flows

--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -51,9 +51,12 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         {{ xGovukSecondaryNavigation({
             visuallyHiddenTitle: "Secondary menu",
             items: [
-            	{ text: "Programme details", href: "/project/" }, 
-				{ text: "Project reports", href: "/project/", current: true }, 
-              	{ text: "Users", href: "/users/" }
+            
+            { text: "Organisation details", href: "/project/" }, 	  
+            
+				        
+              	{ text: "Users", href: "/users/" },
+                { text: "Programmes and projects", href: "/project/", current: true }
             ]
         }) }}
     {% endif %} 
