--- a/app/views/project.html
+++ b/app/views/project.html
@@ -28,7 +28,11 @@
 				<li>Project ID</li>
 
 
-		</ul>
+
+			</ul>
+
+
+			<p>To use the ‘Tag’ and meet the new Web Content Accessibility Guidelines (WCAG) 2.2 criteria, make sure that users can successfully:</p>
 
 		<!-- <h2 class="govuk-heading-m">Programme 1</h2> -->
 
